Fix Error Handling - README
