# controllers/employees.js
@@ -4,23 +4,23 @@ const createError = require('http-errors');
 const ObjectId = require('mongodb').ObjectId;
 const { employeeSchema } = require('../helper/validation_schema');
 
-
-
 const getAll = async (req, res, next) => {
   /**
    * #swagger.tags = ['Employees']
    * #swagger.summary = "List all the employees"
   */
+  
   try {
     const result = await mongodb.getDb().db().collection('employees').find();
     result.toArray().then((lists) => {
       if (lists.length == 0) {
-        res.send(next(createError(404, 'There are no registered employees')))
+        res.status(404).send(createError('There are no registered employees'));
         return;
       }
       res.setHeader('Content-Type', 'application/json');
       res.status(200).json(lists);
     });
+
   } catch (err) {
     next (err);
   }
@@ -44,7 +44,7 @@ const getSingle = async (req, res, next) => {
 
     result.toArray().then((lists) => {
         if (lists.length == 0) {
-          res.send(next(createError(404, 'The employee with that ID does not exist.')))
+          res.status(404).send(createError('The employee with that ID does not exist.'));
           return;
         }
 
@@ -64,7 +64,21 @@ const createEmployee = async (req, res, next) => {
     * #swagger.description = "Enter the employee information in the body template provided, employeeID is created automatically."
   */
   try {
-    const employee = await employeeSchema.validateAsync(req.body);
+    const employeeBody = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      address: req.body.address,
+      phoneNumber: req.body.phoneNumber,
+      email: req.body.email,
+      birthday: req.body.birthday,
+      jobTitle: req.body.jobTitle,
+      department: req.body.department
+    };
+
+    const employee = await employeeSchema.validateAsync(employeeBody);
+
+    // const swagger = JoiSwagger(employee);
+
     const response = await await mongodb.getDb().db().collection('employees').insertOne(employee);
 
     if (response.acknowledged) {
@@ -86,19 +100,30 @@ const updateEmployee = async (req, res, next) => {
    * #swagger.description = "Enter the Employee ID and any necessary changes in the body template provided."
   */
 
+  const employeeBody = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    address: req.body.address,
+    phoneNumber: req.body.phoneNumber,
+    email: req.body.email,
+    birthday: req.body.birthday,
+    jobTitle: req.body.jobTitle,
+    department: req.body.department
+  };
+
   try {
     if (!ObjectId.isValid(req.params.id)) {
       throw createError(400, 'You must use a valid employee ID to find an employee.')
     }
 
     const employeeId = new ObjectId(req.params.id);
-    const employee = await employeeSchema.validateAsync(req.body);
+    const employee = await employeeSchema.validateAsync(employeeBody);
     const response = await mongodb.getDb().db().collection('employees').replaceOne({ _id: employeeId }, employee);
 
     if (response.modifiedCount > 0) {
       res.status(200).json(response);
     } else {
-      throw createError(500, 'Some error occurred while updating the employee.')
+      res.status(500).json(response.error || 'Some error occurred while updating the employee.');
     }
   } catch (err) {
     if (err.isJoi === true) err.status = 422
@@ -125,7 +150,7 @@ const deleteEmployee = async (req, res, next) => {
     if (response.deletedCount > 0) {
       res.status(200).json(response);
     } else {
-      throw createError(500, 'Some error occurred while deleting the employee.')
+      res.status(500).json(response.error || 'Some error occurred while deleting the employee.');
     }
   } catch (err) {
     next(err);
